--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <header>
   <h1>ManageMe</h1>
   <app-project-list></app-project-list>
+  <app-create-project></app-create-project>
+  <app-edit-project></app-edit-project>
 </header>
