--- a/src/app/edit-project/edit-project.component.html
+++ b/src/app/edit-project/edit-project.component.html
@@ -1,15 +1,9 @@
-<div class="edit-project">
-    <h2>Edytuj Projekt</h2>
-    <form [formGroup]="projectForm" (ngSubmit)="updateProject()">
-      <div class="form-group">
-        <label for="name">Nazwa</label>
-        <input type="text" id="name" formControlName="name" />
-      </div>
-      <div class="form-group">
-        <label for="description">Opis</label>
-        <textarea id="description" formControlName="description"></textarea>
-      </div>
-      <button type="submit" [disabled]="projectForm.invalid">Edytuj</button>
-    </form>
+<h2>Edit Project</h2>
+
+<form [formGroup]="projectForm" (ngSubmit)="updateProject()">
+  <div>
+    <label for="name">Nazwa:</label>
+    <input type="text" id="name" formControlName="name" />
   </div>
-  
+  <div>
+    <label for="description">Opis:</label>
