task i func crud bez u

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,8 @@
   <app-project-list></app-project-list>
   <app-create-project></app-create-project>
   <app-edit-project></app-edit-project>
+  <app-create-functionality></app-create-functionality>
+  <app-functionality-list></app-functionality-list>
+  <app-create-task></app-create-task>
+  <app-task-list></app-task-list>
 </header>
