--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
   <h1>ManageMe</h1>
   <app-project-list></app-project-list>
   <app-create-project></app-create-project>
-  <app-edit-project></app-edit-project>
-  <app-create-functionality></app-create-functionality>
-  <app-functionality-list></app-functionality-list>
-  <app-create-task></app-create-task>
-  <app-task-list></app-task-list>
 </header>
+
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+  
