--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <header>
   <h1>ManageMe</h1>
+  </header>
+  <main>
   <app-project-list></app-project-list>
   <app-create-project></app-create-project>
-</header>
-
-  <main>
-    <router-outlet></router-outlet>
+  <app-create-functionality></app-create-functionality>
+  <app-functionality-list></app-functionality-list>
+  <app-create-task></app-create-task>
+  <app-task-list></app-task-list>
   </main>
   
