--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,8 @@
   <app-functionality-list></app-functionality-list>
   <app-create-task></app-create-task>
   <app-task-list></app-task-list>
+ 
+  <app-edit-task></app-edit-task>
+
   </main>
   
