crud func, task kanban

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,7 @@
 <header>
   <h1>ManageMe</h1>
-  </header>
-  <main>
-  <app-project-list></app-project-list>
-  <app-create-project></app-create-project>
-  <app-create-functionality></app-create-functionality>
-  <app-functionality-list></app-functionality-list>
-  <app-create-task></app-create-task>
-  <app-task-list></app-task-list>
- 
-  <app-edit-task></app-edit-task>
+</header>
 
-  </main>
-  
+<main>
+  <router-outlet></router-outlet>
+</main>
