--- a/src/app/create-task/create-task.component.html
+++ b/src/app/create-task/create-task.component.html
@@ -1,25 +1,27 @@
-<form (ngSubmit)="createTask()">
+<form [formGroup]="taskForm" (ngSubmit)="createTask()">
   <div>
-    <label for="name">Nazwa zadania</label>
-    <input type="text" id="name" [(ngModel)]="task.name" name="name" required>
+    <label for="name">Nazwa:</label>
+    <input type="text" id="name" formControlName="name" />
   </div>
   <div>
-    <label for="description">Opis zadania</label>
-    <textarea id="description" [(ngModel)]="task.description" name="description" required></textarea>
+    <label for="description">Opis:</label>
+    <input type="text" id="description" formControlName="description" />
   </div>
   <div>
-    <label for="status">Status zadania</label>
-    <select id="status" [(ngModel)]="task.status" name="status" required>
+    <label for="status">Status:</label>
+    <select formControlName="status" id="status" class="form-control">
       <option value="TODO">TODO</option>
       <option value="DOING">DOING</option>
       <option value="DONE">DONE</option>
     </select>
-    <label for="functionality-select">Funkcjonalność:</label>
-<select id="functionality-select" [(ngModel)]="task.functionalityId">
-  <option *ngFor="let functionality of functionalities" [value]="functionality.functionalityId">
-    {{ functionality.name }} (ID: {{ functionality.functionalityId }})
-  </option>
-</select>
   </div>
-  <button type="submit">Dodaj zadanie</button>
+  <div>
+    <label for="functionality">Funkcjonalność:</label>
+    <select id="functionality" formControlName="functionalityId">
+      <option *ngFor="let functionality of functionalities" [value]="functionality.functionalityId">
+        {{ functionality.name }}
+      </option>
+    </select>
+  </div>
+  <button type="submit">Utwórz zadanie</button>
 </form>
