--- a/src/app/functionality-list/functionality-list.component.html
+++ b/src/app/functionality-list/functionality-list.component.html
@@ -4,11 +4,14 @@
   <li *ngFor="let functionality of functionalities">
     <h4>{{ functionality.name }}</h4>
     <p>{{ functionality.description }}</p>
+    
     <td>
       <button (click)="editFunctionality(functionality.functionalityId)" routerLink="/edit-functionality/{{ functionality.functionalityId }}">
         Edytuj
       </button>
         <button (click)="deleteFunctionality(functionality.functionalityId)">Usuń</button>
+        <button (click)="navigateToFunctionalityDetails(functionality)">Szczegóły</button>
       </td>
   </li>
 </ul>
+
