--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,14 +1,35 @@
-<h2>Zadania</h2>
-
-<ul>
-  <li *ngFor="let task of tasks">
-    <h4>{{ task.name }}</h4>
-    <p>{{ task.description }}</p>
-    <p>{{task.status}}</p>
-    <p>{{task.functionalityId}}</p>
-    <p>{{ task.name }} (ID: {{ task.taskId }})
-        <button (click)="deleteTask(task)">Usuń</button>
-        <button (click)="editTask(task.taskId)">Edytuj</button>
-         
-  </li>
-</ul>
+<div class="kanban-container">
+  <div class="kanban-column">
+    <h2>TODO</h2>
+    <ul class="task-list" id="todo-column">
+      <li *ngFor="let task of tasks | filterByStatus:'TODO'" class="task">
+        <div class="task-header">
+          <h3>{{ task.name }}</h3>
+        </div>
+        <p>{{ task.description }}</p>
+      </li>
+    </ul>
+  </div>
+  <div class="kanban-column">
+    <h2>DOING</h2>
+    <ul class="task-list" id="doing-column">
+      <li *ngFor="let task of tasks | filterByStatus:'DOING'" class="task">
+        <div class="task-header">
+          <h3>{{ task.name }}</h3>
+        </div>
+        <p>{{ task.description }}</p>
+      </li>
+    </ul>
+  </div>
+  <div class="kanban-column">
+    <h2>DONE</h2>
+    <ul class="task-list" id="done-column">
+      <li *ngFor="let task of tasks | filterByStatus:'DONE'" class="task">
+        <div class="task-header">
+          <h3>{{ task.name }}</h3>
+        </div>
+        <p>{{ task.description }}</p>
+      </li>
+    </ul>
+  </div>
+</div>
