--- a/src/app/functionality-details/functionality-details.component.html
+++ b/src/app/functionality-details/functionality-details.component.html
@@ -4,8 +4,6 @@
 
   <h3>Zadania:</h3>
   <ul>
-    <li *ngFor="let task of tasks">
-      {{ task.name }} - {{ task.status }}
-    </li>
+    <li *ngFor="let task of functionality.tasks">{{ task.name }}</li>
   </ul>
 </div>
