--- a/src/app/create-task/create-task.component.html
+++ b/src/app/create-task/create-task.component.html
@@ -17,10 +17,8 @@
   </div>
   <div>
     <label for="functionality">Funkcjonalność:</label>
-    <select id="functionality" formControlName="functionalityId">
-      <option *ngFor="let functionality of functionalities" [value]="functionality.functionalityId">
-        {{ functionality.name }}
-      </option>
+    <select formControlName="functionalityId">
+      <option *ngFor="let functionality of functionalities" [value]="functionality.functionalityId">{{ functionality.name }}</option>
     </select>
   </div>
   <button type="submit">Utwórz zadanie</button>
