--- a/src/app/edit-functionality/edit-functionality.component.html
+++ b/src/app/edit-functionality/edit-functionality.component.html
@@ -1,9 +1,4 @@
 <h2>Edytuj Funkcjonalność</h2>
-
-<div *ngIf="errorMessage" class="error-message">
-  {{ errorMessage }}
-</div>
-
 <div *ngIf="functionality">
   <form (ngSubmit)="updateFunctionality()" #editForm="ngForm">
     <div>
@@ -14,6 +9,23 @@
     <div>
       <label for="description">Opis:</label>
       <textarea id="description" name="description" [(ngModel)]="functionality.description" required></textarea>
+    </div>
+
+    <div>
+      <label for="status">Status:</label>
+      <select id="status" name="status" [(ngModel)]="functionality.status" required>
+        <option value="TODO">TODO</option>
+        <option value="DOING">DOING</option>
+        <option value="DONE">DONE</option>
+      </select>
+    </div>
+    <div>
+      <label for="priority">Priorytet:</label>
+      <select id="priority" name="priority" [(ngModel)]="functionality.priority" required>
+        <option value="niski">Niski</option>
+        <option value="średni">Średni</option>
+        <option value="wysoki">Wysoki</option>
+      </select>
     </div>
 
     <button type="submit">Wyślij</button>
