--- a/src/app/functionality-details/functionality-details.component.html
+++ b/src/app/functionality-details/functionality-details.component.html
@@ -1,6 +1,8 @@
 <div *ngIf="functionality">
   <h2>{{ functionality.name }}</h2>
   <p>{{ functionality.description }}</p>
+  <p>Status: {{ functionality.status }}</p>
+  <p>Priorytet: {{functionality.priority}}</p>
 
   <h3>Zadania:</h3>
   <ul>
