--- a/src/app/task-details/task-details.component.html
+++ b/src/app/task-details/task-details.component.html
@@ -6,5 +6,9 @@
   <p>Status: {{ task.status }}</p>
   <p>Priorytet: {{ task.priority }}</p>
   <p>ID Funkcjonalności: {{ task.functionalityId }}</p>
+  <p>Przewidywany czas wykonania: {{ task.estimatedTime }}</p>
+  <p>Data rozpoczęcia: {{ task.startDate }}</p>
+  <p>Data zakończenia: {{ task.endDate }}</p>
+  <p>Data utworzenia: {{task.createdDate}}</p>
 </div>
 
