--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -5,13 +5,13 @@
       <li *ngFor="let task of tasks | filterByStatus:'TODO'" class="task">
         <div class="task-header">
           <h3>{{ task.name }}</h3>
-          <div>
-            <button (click)="editTask(task.taskId)">Edytuj</button>
-            <button (click)="deleteTask(task)">Usuń</button>
-            <button (click)="navigateToTaskDetails(task.taskId)">Szczegóły</button>
-          </div>
         </div>
         <p>{{ task.description }}</p>
+        <div class="task-actions">
+          <button (click)="editTask(task.taskId)">Edytuj</button>
+          <button (click)="deleteTask(task)">Usuń</button>
+          <button (click)="navigateToTaskDetails(task.taskId)">Szczegóły</button>
+        </div>
       </li>
     </ul>
   </div>
@@ -21,13 +21,13 @@
       <li *ngFor="let task of tasks | filterByStatus:'DOING'" class="task">
         <div class="task-header">
           <h3>{{ task.name }}</h3>
-          <div>
-            <button (click)="editTask(task.taskId)">Edytuj</button>
-            <button (click)="deleteTask(task)">Usuń</button>
-            <button (click)="navigateToTaskDetails(task.taskId)">Szczegóły</button>
-          </div>
         </div>
         <p>{{ task.description }}</p>
+        <div class="task-actions">
+          <button (click)="editTask(task.taskId)">Edytuj</button>
+          <button (click)="deleteTask(task)">Usuń</button>
+          <button (click)="navigateToTaskDetails(task.taskId)">Szczegóły</button>
+        </div>
       </li>
     </ul>
   </div>
@@ -37,13 +37,13 @@
       <li *ngFor="let task of tasks | filterByStatus:'DONE'" class="task">
         <div class="task-header">
           <h3>{{ task.name }}</h3>
-          <div>
-            <button (click)="editTask(task.taskId)">Edytuj</button>
-            <button (click)="deleteTask(task)">Usuń</button>
-            <button (click)="navigateToTaskDetails(task.taskId)">Szczegóły</button>
-          </div>
         </div>
         <p>{{ task.description }}</p>
+        <div class="task-actions">
+          <button (click)="editTask(task.taskId)">Edytuj</button>
+          <button (click)="deleteTask(task)">Usuń</button>
+          <button (click)="navigateToTaskDetails(task.taskId)">Szczegóły</button>
+        </div>
       </li>
     </ul>
   </div>
