przyciski, status funkc

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,12 @@
 <header>
 <title>ManageMe</title>
 <app-user-panel></app-user-panel>
+<div class="menu">
+  <a href="/projects"><button>Lista projektów</button></a>
+  <a href="/functionality-list"><button>Lista funkcjonalności</button></a>
+  <a href="/task-list"><button>Lista zadań</button></a>
+</div>
+
 </header>
 
 <main>
