--- a/src/app/functionality-list/functionality-list.component.html
+++ b/src/app/functionality-list/functionality-list.component.html
@@ -1,5 +1,5 @@
 <h2>Funkcjonalności</h2>
-
+<a href="/create-functionality"><button>Dodaj funkconalność</button></a>
 <ul>
   <li *ngFor="let functionality of functionalities">
     <h4>{{ functionality.name }}</h4>
