--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,4 +1,5 @@
 <form [formGroup]="loginForm">
+  <a> Login: JohnDoe Hasło: 123</a>
   <div>
     <label for="username">Nazwa użytkownika:</label>
     <input type="text" id="username" formControlName="username">
