--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -1,4 +1,5 @@
 <h2>Lista projektów</h2>
+<a href="/create-project"><button>Dodaj projekt</button></a>
 <ul>
   <li *ngFor="let project of projects; let i = index">
     <h4>{{ project.name }}</h4>
