--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,3 +1,4 @@
+<a href="/create-task"><button>Dodaj zadanie</button></a>
 <div class="kanban-container">
   <div class="kanban-column">
     <h2>TODO</h2>
