--- a/src/app/functionality-details/functionality-details.component.html
+++ b/src/app/functionality-details/functionality-details.component.html
@@ -3,6 +3,9 @@
   <p>{{ functionality.description }}</p>
   <p>Status: {{ functionality.status }}</p>
   <p>Priorytet: {{functionality.priority}}</p>
+  <p>Data dodania: {{ functionality.creationDate | date }}</p>
+  <p>Data startu: {{ functionality.startDate | date }}</p>
+
 
   <h3>Zadania:</h3>
   <ul>
